<resources>
    <string name="userName">hqx</string>
    <string name="userPassword">123456</string>
    <string name="serverHost">124.223.115.35</string>
    <string name="serverDomain">124.223.115.35</string>

    <string name="app_name">汉语训练平台</string>
    <string name="main">练习</string>
    <string name="exam">考级</string>
    <string name="talk">交流</string>
    <string name="mine">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="practice_hear">听力练习</string>
    <string name="practice_write">书法练习</string>
    <string name="practice_spoke">口语练习</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="搜索按钮">搜索</string>
</resources>